// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpensesSummary component rendering (multiple expenses):  should correctly render ExpensesSummary with multiple expenses 1`] = `
<h2>
  Viewing 
  20
   
  expenses
   totalling 
  $5,503.75
</h2>
`;

exports[`ExpensesSummary component rendering (one expense):  should correctly render ExpensesSummary with one expense 1`] = `
<h2>
  Viewing 
  1
   
  expense
   totalling 
  $2.50
</h2>
`;
